--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mt3gt-standard-meter</name>
+	<name>mt3gt-gen</name>
 	<comment></comment>
 	<projects>
 	</projects>
