--- a/dsp-fw/cpu1/.cproject
+++ b/dsp-fw/cpu1/.cproject
@@ -153,7 +153,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/common_libraries/libraries/math/CLAmath/c28/lib/F2837xRevB_c1bootROM_CLADataROMSymbols.lib|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_SWPrioritizedPieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_PieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_sci_io.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="source/common_libraries/hardware/si5351c/si5351c.c|source/common_libraries/libraries/math/CLAmath/c28/lib/F2837xRevB_c1bootROM_CLADataROMSymbols.lib|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_SWPrioritizedPieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_PieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_sci_io.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
