new cli working fine

--- a/dsp-fw/cpu1/.settings/org.eclipse.core.resources.prefs
+++ b/dsp-fw/cpu1/.settings/org.eclipse.core.resources.prefs
@@ -106,4 +106,46 @@ encoding//CPU1_FLASH/source/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/sources.mk=UTF-8
 encoding//CPU1_FLASH/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/makefile=UTF-8
+encoding//CPU1_FLASH_STANDALONE/objects.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/application/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/application/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/algorithms/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/algorithms/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/ada4254/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/ada4254/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/f2837x/includes/common/source/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/f2837x/includes/common/source/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/f2837x/includes/headers/source/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/f2837x/includes/headers/source/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/si5351c/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/hardware/si5351c/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/fft/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/fft/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/filter/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/filter/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/utility/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/utility/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/vector/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/dsp/FPU/source/vector/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/math/CLAmath/c28/lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/math/CLAmath/c28/lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/math/FPUfastRTS/c28/lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/math/FPUfastRTS/c28/lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/math/FPUfastRTS/c28/source/fpu32/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/math/FPUfastRTS/c28/source/fpu32/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/sfra/lib/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/libraries/sfra/lib/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/system/drivers/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/system/drivers/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/system/drivers/utils/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/common_libraries/system/drivers/utils/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/source/subdir_vars.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/sources.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH_STANDALONE/subdir_vars.mk=UTF-8
+encoding//source/application/ipc_simple.c=UTF-8
 encoding//source/cla1_standard.cla=UTF-8
