--- a/dsp-fw/cpu1/.cproject
+++ b/dsp-fw/cpu1/.cproject
@@ -64,7 +64,7 @@
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\hardware\si5351c"/>
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\System\Drivers"/>
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\System\Drivers\inc"/>
-									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\System\Drivers\Utils"/>
+									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\utils"/>
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\libraries\sfra\include"/>
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}\algorithms"/>
 									<listOptionValue builtIn="false" value="${PROJECT_LOC}\source"/>
@@ -153,7 +153,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/common_libraries/hardware/si5351c/si5351c.c|source/common_libraries/libraries/math/CLAmath/c28/lib/F2837xRevB_c1bootROM_CLADataROMSymbols.lib|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_SWPrioritizedPieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_PieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_sci_io.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="source/common_libraries/hardware/si5351c/si5351c.c|source/common_libraries/libraries/math/CLAmath/c28/lib/F2837xRevB_c1bootROM_CLADataROMSymbols.lib" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -252,7 +252,7 @@
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}/libraries/utilities/rampgen/include"/>
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}/system/drivers"/>
 									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}/system/drivers/inc"/>
-									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}/system/drivers/utils"/>
+									<listOptionValue builtIn="false" value="${COMMON_LIBRARIES}/utils"/>
 								</option>
 								<option id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.ADVICE__PERFORMANCE.1696578183" name="Provide advice on optimization techniques (--advice:performance)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.ADVICE__PERFORMANCE" value="--advice:performance=all" valueType="string"/>
 								<option IS_BUILTIN_EMPTY="false" IS_VALUE_EMPTY="false" id="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.DEFINE.169136025" name="Pre-define NAME (--define, -D)" superClass="com.ti.ccstudio.buildDefinitions.C2000_22.6.compilerID.DEFINE" valueType="definedSymbols">
@@ -316,7 +316,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_SWPrioritizedPieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_PieVect.c|source/common_libraries/hardware/f2837x/includes/common/source/F2837xD_sci_io.c|source/common_libraries/hardware/si5351c/si5351c.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="source/common_libraries/hardware/si5351c/si5351c.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
