--- a/dsp-fw/cpu1/.cproject
+++ b/dsp-fw/cpu1/.cproject
@@ -316,7 +316,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/common_libraries/hardware/si5351c/si5351c.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="source/generation_sm.c|source/common_libraries/hardware/si5351c/si5351c.c" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
