--- a/dsp-fw/cpu1/.settings/org.eclipse.core.resources.prefs
+++ b/dsp-fw/cpu1/.settings/org.eclipse.core.resources.prefs
@@ -35,6 +35,8 @@ encoding//CPU1_FLASH/common_libraries/system/drivers/utils/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/common_libraries/system/drivers/utils/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/makefile=UTF-8
 encoding//CPU1_FLASH/objects.mk=UTF-8
+encoding//CPU1_FLASH/source/application/fw/subdir_rules.mk=UTF-8
+encoding//CPU1_FLASH/source/application/fw/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/source/application/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH/source/application/subdir_vars.mk=UTF-8
 encoding//CPU1_FLASH/source/common_librairies/algorithms/subdir_rules.mk=UTF-8
