--- a/dsp-fw/cpu1/.settings/org.eclipse.core.resources.prefs
+++ b/dsp-fw/cpu1/.settings/org.eclipse.core.resources.prefs
@@ -152,4 +152,4 @@ encoding//CPU1_FLASH_STANDALONE/sources.mk=UTF-8
 encoding//CPU1_FLASH_STANDALONE/subdir_rules.mk=UTF-8
 encoding//CPU1_FLASH_STANDALONE/subdir_vars.mk=UTF-8
 encoding//source/application/generation_sm.c=UTF-8
-encoding//source/application/ipc_simple.c=UTF-8
+encoding//source/application/ipc_simple_h=UTF-8
