--- a/dsp-fw/cpu1/.cproject
+++ b/dsp-fw/cpu1/.cproject
@@ -154,7 +154,7 @@
 						</toolChain>
 					</folderInfo>
 					<sourceEntries>
-						<entry excluding="source/common_libraries/hardware/si5351c/si5351c.c|source/common_libraries/libraries/math/CLAmath/c28/lib/F2837xRevB_c1bootROM_CLADataROMSymbols.lib" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
+						<entry excluding="source/application/ipc_usage_examples.c|source/common_libraries/hardware/si5351c/si5351c.c|source/common_libraries/libraries/math/CLAmath/c28/lib/F2837xRevB_c1bootROM_CLADataROMSymbols.lib" flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name=""/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
